implement achievement get post method
