# back/api/proto/aimo_grpc.pb.go
@@ -24,6 +24,9 @@ type AimoClient interface {
 	GetAchievementMeans(ctx context.Context, in *AchievementMeanModel, opts ...grpc.CallOption) (*GetAchievementMeansResponse, error)
 	PostAchievementMeans(ctx context.Context, in *PostAchievementMeansRequest, opts ...grpc.CallOption) (*PostAchievementMeansResponse, error)
 	PutAchievementMeans(ctx context.Context, in *PutAchievementMeansRequest, opts ...grpc.CallOption) (*PutAchievementMeansResponses, error)
+	GetAchievementMean(ctx context.Context, in *GetAchievementMeanRequest, opts ...grpc.CallOption) (*GetAchievementMeanResponse, error)
+	PostAchievementMean(ctx context.Context, in *AchievementMeanModel, opts ...grpc.CallOption) (*PostAchievementMeanResponse, error)
+	PutAchievementMean(ctx context.Context, in *AchievementMeanModel, opts ...grpc.CallOption) (*PostDefaultResponse, error)
 }
 
 type aimoClient struct {
@@ -88,6 +91,33 @@ func (c *aimoClient) PutAchievementMeans(ctx context.Context, in *PutAchievement
 	return out, nil
 }
 
+func (c *aimoClient) GetAchievementMean(ctx context.Context, in *GetAchievementMeanRequest, opts ...grpc.CallOption) (*GetAchievementMeanResponse, error) {
+	out := new(GetAchievementMeanResponse)
+	err := c.cc.Invoke(ctx, "/aimo.aimo/getAchievementMean", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *aimoClient) PostAchievementMean(ctx context.Context, in *AchievementMeanModel, opts ...grpc.CallOption) (*PostAchievementMeanResponse, error) {
+	out := new(PostAchievementMeanResponse)
+	err := c.cc.Invoke(ctx, "/aimo.aimo/postAchievementMean", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *aimoClient) PutAchievementMean(ctx context.Context, in *AchievementMeanModel, opts ...grpc.CallOption) (*PostDefaultResponse, error) {
+	out := new(PostDefaultResponse)
+	err := c.cc.Invoke(ctx, "/aimo.aimo/putAchievementMean", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // AimoServer is the server API for Aimo service.
 // All implementations must embed UnimplementedAimoServer
 // for forward compatibility
@@ -98,6 +128,9 @@ type AimoServer interface {
 	GetAchievementMeans(context.Context, *AchievementMeanModel) (*GetAchievementMeansResponse, error)
 	PostAchievementMeans(context.Context, *PostAchievementMeansRequest) (*PostAchievementMeansResponse, error)
 	PutAchievementMeans(context.Context, *PutAchievementMeansRequest) (*PutAchievementMeansResponses, error)
+	GetAchievementMean(context.Context, *GetAchievementMeanRequest) (*GetAchievementMeanResponse, error)
+	PostAchievementMean(context.Context, *AchievementMeanModel) (*PostAchievementMeanResponse, error)
+	PutAchievementMean(context.Context, *AchievementMeanModel) (*PostDefaultResponse, error)
 	mustEmbedUnimplementedAimoServer()
 }
 
@@ -122,6 +155,15 @@ func (UnimplementedAimoServer) PostAchievementMeans(context.Context, *PostAchiev
 }
 func (UnimplementedAimoServer) PutAchievementMeans(context.Context, *PutAchievementMeansRequest) (*PutAchievementMeansResponses, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method PutAchievementMeans not implemented")
+}
+func (UnimplementedAimoServer) GetAchievementMean(context.Context, *GetAchievementMeanRequest) (*GetAchievementMeanResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetAchievementMean not implemented")
+}
+func (UnimplementedAimoServer) PostAchievementMean(context.Context, *AchievementMeanModel) (*PostAchievementMeanResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method PostAchievementMean not implemented")
+}
+func (UnimplementedAimoServer) PutAchievementMean(context.Context, *AchievementMeanModel) (*PostDefaultResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method PutAchievementMean not implemented")
 }
 func (UnimplementedAimoServer) mustEmbedUnimplementedAimoServer() {}
 
@@ -244,6 +286,60 @@ func _Aimo_PutAchievementMeans_Handler(srv interface{}, ctx context.Context, dec
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Aimo_GetAchievementMean_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetAchievementMeanRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AimoServer).GetAchievementMean(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/aimo.aimo/getAchievementMean",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AimoServer).GetAchievementMean(ctx, req.(*GetAchievementMeanRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Aimo_PostAchievementMean_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AchievementMeanModel)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AimoServer).PostAchievementMean(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/aimo.aimo/postAchievementMean",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AimoServer).PostAchievementMean(ctx, req.(*AchievementMeanModel))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Aimo_PutAchievementMean_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AchievementMeanModel)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AimoServer).PutAchievementMean(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/aimo.aimo/putAchievementMean",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AimoServer).PutAchievementMean(ctx, req.(*AchievementMeanModel))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // Aimo_ServiceDesc is the grpc.ServiceDesc for Aimo service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -274,6 +370,18 @@ var Aimo_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "putAchievementMeans",
 			Handler:    _Aimo_PutAchievementMeans_Handler,
+		},
+		{
+			MethodName: "getAchievementMean",
+			Handler:    _Aimo_GetAchievementMean_Handler,
+		},
+		{
+			MethodName: "postAchievementMean",
+			Handler:    _Aimo_PostAchievementMean_Handler,
+		},
+		{
+			MethodName: "putAchievementMean",
+			Handler:    _Aimo_PutAchievementMean_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
